# OpenGL

./: .gitignore  CMakeLists.txt
Executable/: CMakeLists.txt  main.cpp
Executable/Shaders/: default.frag  default.vert
